# claude-plugins

./: .cleanup-after-restart.md  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  MARKETPLACE-STANDARDS.md  README.md  REBUILD-REVIEW.md  ROADMAP.md  SANDBOX-TASKS.md  TASKS.md  architectural-boundaries.md  architecture.md  claude-marketplace--diff.md  decisions.md  package-lock.json  package.json  plan-init-project.md  plan.md  pyproject.toml  pyrightconfig.json  sandbox-derivative-friction.md
plugins/ocd/: .mcp.json  ARCHITECTURE.md  README.md  architecture.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  run.py
plugins/ocd/.claude-plugin/: plugin.json
plugins/ocd/commands/: init.md  status.md
plugins/ocd/conventions/: CLAUDE-md.md  README-md.md  README.md  architecture-md.md  architecture.md  evaluation-skill-md.md  evaluation-triage.md  governance-md.md  markdown.md  mcp-relational.md  mcp-server.md  python.md  readme-md.md  skill-init-py.md  skill-md.md  testing.md
plugins/ocd/dependencies/: process-flow-notation.md
plugins/ocd/hooks/: auto_approval.py  convention_gate.py  hooks.json  install_deps.sh
plugins/ocd/patterns/: mcp-server.md
plugins/ocd/plugin/: __init__.py  __main__.py  _content.py  _deployment.py  _discovery.py  _environment.py  _formatting.py  _orchestration.py  _permissions.py
plugins/ocd/references/: init_manifest.json
plugins/ocd/rules/: README.md  architecture.md  design-principles.md  log-routing.md  ocd-agent-authoring.md  ocd-communication.md  ocd-design-principles.md  ocd-friction.md  ocd-navigator.md  (+6 more)
(+2066 files in other folders)
