[project]
name = "claude-plugin-dev"
version = "0.1.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = ["plugins/ocd/scripts", "plugins/ocd"]
testpaths = ["tests", "plugins/ocd/tests", "plugins/ocd/skills/navigator/scripts/tests", "plugins/ocd/skills/conventions/scripts/tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
