[project]
name = "claude-plugin-dev"
version = "0.1.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = ["plugins/ocd/scripts", "plugins/ocd", "plugins/blueprint/skills/research/scripts"]
addopts = "--import-mode=importlib"
testpaths = ["tests", "plugins/ocd/tests", "plugins/ocd/skills/navigator/scripts/tests", "plugins/ocd/skills/conventions/scripts/tests", "plugins/blueprint/skills/research/scripts/tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
