[project]
name = "ocd"
# Version is a PEP 621 requirement but unused here — the authoritative
# plugin version lives in .claude-plugin/plugin.json. This file exists
# only to declare runtime dependencies, installed by hooks/install_deps.sh
# into ${CLAUDE_PLUGIN_DATA}/venv on SessionStart.
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
    "weasyprint>=62.0",
    "markdown>=3.6",
    "pytest>=8.0",
    "libcst>=1.0",
    "pypdf>=5.0",
]
